Desafio conectar con una API

--- a/notebooks/ProyectoDS_ParteI_Matcovich.ipynb
+++ b/notebooks/ProyectoDS_ParteI_Matcovich.ipynb
@@ -1686,7 +1686,7 @@
     "X = df[['employee_residence', 'company_location', 'work_year', 'job_title', 'experience_level']]\n",
     "y = df['salary_in_usd']\n",
     "\n",
-    "# Creamos el modelo de regresión lineal o logística\n",
+    "# Creamos el modelo de regresión lineal\n",
     "model = LinearRegression()\n",
     "model.fit(X, y)\n",
     "\n",
