Desafio Data Wrangling

--- a/notebooks/Desafio_APIS_Diego_Matcovich.ipynb
+++ b/notebooks/Desafio_APIS_Diego_Matcovich.ipynb
@@ -2,69 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: fastapi in c:\\users\\diego\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (0.103.1)\n",
-      "Requirement already satisfied: uvicorn in c:\\users\\diego\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (0.23.2)\n",
-      "Requirement already satisfied: anyio<4.0.0,>=3.7.1 in c:\\users\\diego\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from fastapi) (3.7.1)\n",
-      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,!=2.0.0,!=2.0.1,!=2.1.0,<3.0.0,>=1.7.4 in c:\\users\\diego\\appdata\\roaming\\python\\python311\\site-packages (from fastapi) (1.10.12)\n",
-      "Requirement already satisfied: starlette<0.28.0,>=0.27.0 in c:\\users\\diego\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from fastapi) (0.27.0)\n",
-      "Requirement already satisfied: typing-extensions>=4.5.0 in c:\\users\\diego\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from fastapi) (4.7.1)\n",
-      "Requirement already satisfied: click>=7.0 in c:\\users\\diego\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from uvicorn) (8.1.7)\n",
-      "Requirement already satisfied: h11>=0.8 in c:\\users\\diego\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from uvicorn) (0.14.0)\n",
-      "Requirement already satisfied: idna>=2.8 in c:\\users\\diego\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from anyio<4.0.0,>=3.7.1->fastapi) (3.4)\n",
-      "Requirement already satisfied: sniffio>=1.1 in c:\\users\\diego\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from anyio<4.0.0,>=3.7.1->fastapi) (1.3.0)\n",
-      "Requirement already satisfied: colorama in c:\\users\\diego\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from click>=7.0->uvicorn) (0.4.6)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "Collecting python-dotenv\n",
+      "  Downloading python_dotenv-1.0.0-py3-none-any.whl (19 kB)\n",
+      "Installing collected packages: python-dotenv\n",
+      "Successfully installed python-dotenv-1.0.0\n"
      ]
     }
    ],
    "source": [
-    "pip install fastapi uvicorn\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: nest_asyncio in c:\\users\\diego\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (1.5.6)Note: you may need to restart the kernel to use updated packages.\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install nest_asyncio"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: nest_asyncio in c:\\users\\diego\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (1.5.6)\n",
-      "Requirement already satisfied: uvicorn in c:\\users\\diego\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (0.23.2)\n",
-      "Requirement already satisfied: click>=7.0 in c:\\users\\diego\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from uvicorn) (8.1.7)\n",
-      "Requirement already satisfied: h11>=0.8 in c:\\users\\diego\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from uvicorn) (0.14.0)\n",
-      "Requirement already satisfied: colorama in c:\\users\\diego\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from click>=7.0->uvicorn) (0.4.6)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install nest_asyncio uvicorn"
+    "!pip install python-dotenv\n"
    ]
   },
   {
@@ -73,11 +26,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import nest_asyncio\n",
-    "from fastapi import FastAPI\n",
-    "import uvicorn\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
     "\n",
-    "nest_asyncio.apply()"
+    "load_dotenv()\n",
+    "api_key1 = os.getenv(\"API_KEY_DI\")"
    ]
   },
   {
@@ -136,7 +89,7 @@
     "        'engine': 'google_jobs',\n",
     "        'q': 'data science',  # Reemplaza esto con el título del trabajo que estás buscando\n",
     "        'location': estado,  # Cambia la ubicación a cada estado\n",
-    "        'api_key': '6212cfc0a2334dc7ff7fe69887340584a1bb21f2d7f5f36d9ef8cd533e222ccf',  # Esta es la clave de API de SerpApi\n",
+    "        'api_key': api_key1 ,  # Esta es la clave de API de SerpApi\n",
     "        'num': 10  # Solicita 10 resultados por página\n",
     "    }\n",
     "\n",
@@ -390,7 +343,7 @@
     }
    ],
    "source": [
-    "# Supongamos que tienes un DataFrame llamado df\n",
+    "# inspeccion de donde puede estar el saladio dentro de descripcion\n",
     "num_fila = 3  # El número de la fila que quieres seleccionar\n",
     "nombre_columna = 'description'  # El nombre de la columna que quieres seleccionar\n",
     "\n",
