Desafio Historytelling sin corregir

--- a/notebooks/Desafio_wrangling_Matcovich.ipynb
+++ b/notebooks/Desafio_wrangling_Matcovich.ipynb
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instalo el paquete python-dotenv en el entorno Python actual. Este paquete es útil para manejar archivos .env, que son una forma común y segura de almacenar configuraciones secretas o específicas del entorno (como claves API o contraseñas) para tu aplicación."
+    "Instalo el paquete python-dotenv en el entorno Python actual. Este paquete es útil para manejar archivos .env, que son una forma común y segura de almacenar configuraciones secretas o específicas del entorno (como claves API o contraseñas) para la aplicación."
    ]
   },
   {
@@ -71,7 +71,7 @@
     }
    ],
    "source": [
-    "!pip install python-dotenv"
+    "%pip install python-dotenv"
    ]
   },
   {
@@ -1401,7 +1401,7 @@
     }
    ],
    "source": [
-    "!pip install plotly"
+    "%pip install plotly"
    ]
   },
   {
