Desafio Obtención de insights a partir de visualizaciones

--- a/notebooks/ProyectoDS_ParteI_Matcovich.ipynb
+++ b/notebooks/ProyectoDS_ParteI_Matcovich.ipynb
@@ -949,7 +949,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Explicacion..."
+    "El histograma que generé muestra la distribución de los salarios en la industria tecnológica. En el eje X, los salarios varían desde un mínimo de $5,132 hasta un máximo de $450,000. Cada barra del histograma representa un rango de salarios y la altura de la barra indica cuántos empleados en el conjunto de datos caen dentro de ese rango.\n",
+    "\n",
+    "La mayoría de los salarios están alrededor del valor medio (o “promedio”) de $137,570. Esto es típico en una distribución normal, donde la mayoría de las observaciones se agrupan alrededor del promedio. La “desviación estándar” es una medida de cuánto varían los salarios con respecto al promedio. En este caso, una desviación estándar de $63,055 significa que la mayoría de los salarios están dentro de $63,055 por encima o por debajo del promedio.\n",
+    "\n",
+    "En resumen, este histograma me permite visualizar rápidamente la distribución general de los salarios en la industria tecnológica y entender su variabilidad. "
    ]
   },
   {
